--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Michael Brandmeyer",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.12.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
@@ -24,6 +25,6 @@
     "pg": "^8.16.2"
   },
   "devDependencies": {
-    "prisma": "^6.10.1"
+    "prisma": "^6.12.0"
   }
 }
