--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@quixo3/prisma-session-store": "^3.1.13",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
